Fix alignment timespan

--- a/_sass/layout/timeline.scss
+++ b/_sass/layout/timeline.scss
@@ -76,7 +76,7 @@
   }
 
   .timeline-timespan {
-    justify-content: right;
+    justify-content: flex-end;
   }
 
   .timeline-title {
